favorite and search fix
