# dist/openapi.yaml
@@ -152,7 +152,13 @@ paths:
           description: list of categories intolerance that the user can filter by them
           required: false
           schema:
-            type: string            
+            type: string
+        - in: query
+          name: sort
+          description: the sort method
+          required: false
+          schema:
+            type: string           
       responses:
         '200':
           description: A list of a recipes
